--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": "next/core-web-vitals"
+    "env": {
+        "es2021": true
+    },
+    "extends": ["eslint:recommended", "plugin:tailwindcss/recommended", "next/core-web-vitals"],
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module",
+        "project": "./tsconfig.json"
+    }
 }
