--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "openai": "^4.47.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8",
     "eslint-config-next": "^14.2.3",
+    "eslint-plugin-tailwindcss": "^3.17.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
